--- a/infra/dashboard/Chart.yaml
+++ b/infra/dashboard/Chart.yaml
@@ -15,14 +15,14 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 7.0.0-alpha1
+version: 7.1.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "7.0.0-alpha1"
+appVersion: "7.1.3"
 
 dependencies:
   - name: kubernetes-dashboard
-    version: 7.0.0-alpha1
+    version: 7.1.3
     repository: https://kubernetes.github.io/dashboard
