--- a/infra/dashboard/templates/dashboard-ingress.yaml
+++ b/infra/dashboard/templates/dashboard-ingress.yaml
@@ -10,8 +10,16 @@ spec:
         - name: authentik
           namespace: authentik
       services:
-        - name: kubernetes-dashboard-kong-proxy
-          port: 80
+        - name: kubernetes-dashboard-web
+          port: 8000
+    - match: Host(`dash.rooty.dev`) && PathPrefix(`/api/`)
+      kind: Rule
+      middlewares:
+        - name: authentik
+          namespace: authentik
+      services:
+        - name: kubernetes-dashboard-api
+          port: 9000
     - match: "Host(`dash.rooty.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
       kind: Rule
       priority: 15
