--- a/infra/dashboard/values.yaml
+++ b/infra/dashboard/values.yaml
@@ -3,6 +3,11 @@ kubernetes-dashboard:
     ingress:
       enabled: false
 
+  api:
+    role: api
+    containers:
+      args: [--enable-skip-login]
+
   ## Optional Metrics Server sub-chart configuration
   ## Enable this if you don't already have metrics-server enabled on your cluster and
   ## want to use it with dashboard metrics-scraper
