--- a/apps/librechat/deployment.yaml
+++ b/apps/librechat/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: librechat
-          image: rootydev/librechat
+          image: ghcr.io/danny-avila/librechat-dev:latest
           ports:
             - containerPort: 3080
           envFrom:
