Maybe quotes fix it

--- a/ops/harbor/values.yaml
+++ b/ops/harbor/values.yaml
@@ -8,4 +8,4 @@ harbor:
       registry:
         size: 50Gi
   externalURL: https://harbor.rooty.dev
-  updateStrategy.type: Recreate
+  updateStrategy.type: "Recreate"
