--- a/ops/harbor/templates/ingress.yaml
+++ b/ops/harbor/templates/ingress.yaml
@@ -7,12 +7,12 @@ spec:
     - match: Host(`harbor.rooty.dev`) && PathPrefix(`/`)
       kind: Rule
       services:
-        - name: harbor-core
+        - name: harbor
           port: 80
     - match: Host(`harbor.k8s.rooty.dev`) && PathPrefix(`/`)
       kind: Rule
       services:
-        - name: harbor-core
+        - name: harbor
           port: 80
   tls:
     secretName: rooty-dev-wildcard
