Fix reverse proxy

--- a/ops/harbor/values.yaml
+++ b/ops/harbor/values.yaml
@@ -13,4 +13,5 @@ harbor:
   registry:
     credentials:
       existingSecret: harbor-secret
+    relativeURLs: true
   existingSecretAdminPassword: harbor-secret
