--- a/ops/harbor/values.yaml
+++ b/ops/harbor/values.yaml
@@ -13,5 +13,5 @@ harbor:
   registry:
     credentials:
       existingSecret: harbor-secret
-    relativeURLs: true
+    relativeurls: true
   existingSecretAdminPassword: harbor-secret
