Update cert to include rooty.dev

--- a/infra/cert-manager/issuer/rooty-dev-wildcard.yaml
+++ b/infra/cert-manager/issuer/rooty-dev-wildcard.yaml
@@ -8,6 +8,7 @@ spec:
   dnsNames:
     - "*.k8s.rooty.dev"
     - "*.rooty.dev"
+    - "rooty.dev"
   issuerRef:
     name: cloudflare-issuer
     kind: ClusterIssuer
