--- a/apps/personal-site/ingress.yaml
+++ b/apps/personal-site/ingress.yaml
@@ -4,10 +4,25 @@ metadata:
   name: personal-site
 spec:
   routes:
-    - match: Host(`rooty.dev`) || Host(`www.rooty.dev`) || Host(`k8s.rooty.dev`) || Host(`www.k8s.rooty.dev`) || Host(`blog.rooty.dev`) || Host('www.blog.rooty.dev') # want more? add more
+    - match: Host(`rooty.dev`)
       kind: Rule
       services:
         - name: personal-site
           port: 80
+    - match: Host(`k8s.rooty.dev`)
+      kind: Rule
+      services:
+          - name: personal-site
+            port: 80
+    - match: Host(`www.rooty.dev`)
+      kind: Rule
+      services:
+          - name: personal-site
+            port: 80
+    - match: Host(`www.k8s.rooty.dev`)
+      kind: Rule
+      services:
+          - name: personal-site
+            port: 80
   tls:
     secretName: rooty-dev-wildcard
