--- a/ops/gh-actions/scale-set-controller.yaml
+++ b/ops/gh-actions/scale-set-controller.yaml
@@ -7,5 +7,4 @@ spec:
   targetNamespace: arc-system
   createNamespace: true
   version: v0.9.0
-  chart: gha-runner-scale-set-controller
-  repo: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
+  chart: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
