--- a/ops/gh-actions/scale-set-controller.yaml
+++ b/ops/gh-actions/scale-set-controller.yaml
@@ -6,5 +6,5 @@ metadata:
 spec:
   targetNamespace: arc-system
   createNamespace: true
-  version: v0.9.0
+  version: 0.9.0
   chart: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
