--- a/ops/gh-actions/rooty-dev-scale-set.yaml
+++ b/ops/gh-actions/rooty-dev-scale-set.yaml
@@ -12,6 +12,7 @@ spec:
     containerMode.type: "dind"
     githubConfigSecret: rooty-dev-secret
     template.spec.serviceAccountName: rooty-dev-scale-set-sa
+    githubConfigUrl: "https://github.com/otisdog8/rooty.dev/"
 ---
 apiVersion: v1
 kind: ServiceAccount
