--- a/ops/gh-actions/rooty-dev-scale-set.yaml
+++ b/ops/gh-actions/rooty-dev-scale-set.yaml
@@ -9,7 +9,8 @@ spec:
   version: 0.9.0
   chart: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
   valuesContent: |-
-    containerMode.type: "dind"
+    containerMode:
+      type: dind
     githubConfigSecret: rooty-dev-secret
     template.spec.serviceAccountName: rooty-dev-scale-set-sa
     githubConfigUrl: "https://github.com/otisdog8/rooty.dev/"
