--- a/school/cse132b/templates/deployment-zena.yaml
+++ b/school/cse132b/templates/deployment-zena.yaml
@@ -36,7 +36,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: dashboard-ingress
+  name: zena-ingress
 spec:
   routes:
     - match: Host(`cse132b-zena.rooty.dev`) && PathPrefix(`/`)
