--- a/school/cse132b/templates/deployment-zena.yaml
+++ b/school/cse132b/templates/deployment-zena.yaml
@@ -17,6 +17,19 @@ spec:
           image: harbor.rooty.dev/132b-project/project-zena:latest
           ports:
             - containerPort: 8080
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_USER
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
+            - name: POSTGRES_DB_NAME
+              value: "zena"
       imagePullSecrets:
         - name: harbor-registry
 ---
