--- a/ops/gh-actions/rooty-dev-scale-set.yaml
+++ b/ops/gh-actions/rooty-dev-scale-set.yaml
@@ -16,6 +16,7 @@ spec:
       spec:
         serviceAccountName: rooty-dev-deployment-restart-sa
     githubConfigUrl: "https://github.com/otisdog8/rooty.dev/"
+    minRunners: 1
 ---
 apiVersion: v1
 kind: ServiceAccount
